...
    <string name="transactions_library_group_vocabulary">交易资料</string>
    <string name="transactions_library_group_automation">整理工具</string>
    <string name="transactions_library_categories_title">分类</string>
    <string name="transactions_library_categories_subtitle">支出类型与使用情况</string>
    <string name="transactions_library_merchants_title">商家</string>
    <string name="transactions_library_merchants_subtitle">常去的店与别名</string>
    <string name="transactions_library_tags_title">标签</string>
    <string name="transactions_library_tags_subtitle">按自己的习惯归类</string>
    <string name="transactions_library_rules_title">分类规则</string>
    <string name="transactions_library_rules_subtitle">预览后再应用</string>
    <string name="transactions_library_recycle_bin_title">回收站</string>
    <string name="transactions_library_recycle_bin_subtitle">找回最近移除的内容</string>

...
